# scroll-and-sigil-rust

./: .gitignore  .prettierrc  README.md  rustfmt.toml  server.py  settings.wad
browser-editor/: Cargo.toml  make.bat  make.sh
browser-editor/src/: lib.rs
browser-editor/web/: index.html  server.py
client/: Cargo.toml  make.bat  make.sh
client/src/: app.rs  lib.rs  network.rs  run.rs  webgl.rs
client/src/webgl/: buffer.rs  shader.rs  system.rs  texture.rs  webgl_render_buffer.rs  webgl_system.rs
desktop-editor/: Cargo.toml
desktop-editor/src/: main.rs
entities/particles/: explosion.wad
loading/: main.wad
maps/: example.wad  grass.wad  house.wad
models/: human.total.wad
public/: index.html
public/entities/items/: stimpack.wad
public/entities/npc/: baron.wad
public/entities/particles/: blood.wad
public/entities/scenery/: tree.wad
public/models/: baron.wad  human.copy.wad  human.minecraft.wad  human.wad
public/models/animations/: baron.wad  human.temp.wad  human.wad
public/shaders/: color2d.frag  color2d.vert  model.deferred.vert  screen.vert  ssao.frag  ssao_lighting.frag  texture3d.deferred.vert  texture3d.glsl  visualize_depth.frag  visualize_depth.vert
public/wads/: resources.wad
scroll-sigil-lib/: Cargo.toml
scroll-sigil-lib/src/: canvas.rs  graphics.rs  lib.rs  map.rs  math.rs
scroll-sigil-lib/src/canvas/: canvas.rs
scroll-sigil-lib/src/graphics/: render_buffer.rs
scroll-sigil-lib/src/map/: sector.rs  triangle.rs  triangulate.rs  world.rs
scroll-sigil-lib/src/math/: point.rs  util.rs  vector.rs
server/: Cargo.toml
server/src/: main.rs
shaders/: model.deferred.frag  model.frag  screen.frag  ssao_blur.frag  texture3d.deferred.frag  texture3d.frag  texture3d_color.frag  texture3d_color.vert
sigil/: Cargo.toml
sigil/src/: game.rs  graphics.rs  lib.rs  map.rs  math.rs  render.rs  things.rs  world.rs
sigil/src/game/: camera.rs  game.rs
sigil/src/graphics/: render_buffer.rs
sigil/src/io/: input.rs
sigil/src/map/: line.rs  sector.rs  triangle.rs  triangulate.rs  wall.rs
sigil/src/math/: matrix.rs  tuple.rs  vector.rs
sigil/src/render/: buffer.rs  image.rs  render.rs  sprite.rs
sigil/src/things/: baron.rs  hero.rs  scenery.rs  thing.rs
sigil/src/world/: decal.rs  particle.rs  render.rs  world.rs  world_scene.rs
test/: Cargo.toml
test/src/: main.rs
wad/: extension.sh
wad-extension/wad/: package.json
wad/wad/syntaxes/: wad.tmLanguage.json
