[package]
name = "scroll-and-sigil-editor-browser"
version = "0.1.0"
authors = ["Nate M <email>"]
edition = "2018"

[dependencies]
editor = { path = "../scroll-sigil-lib" }
rand = "0.7.3"
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console'
]

[lib]
crate-type = ["cdylib", "rlib"]
