[package]
name = "scroll-and-sigil-client"
version = "0.1.0"
authors = ["Nathan M <natemmcm@gmail.com>"]
edition = "2018"

[dependencies]
sigil = { path = "../sigil" }
rand = "0.7.3"
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'CssStyleDeclaration',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'MouseEvent',
  'console'
]

[lib]
crate-type = ["cdylib", "rlib"]
