[package]
name = "scroll-and-sigil-client"
version = "0.1.0"
authors = ["Nathan M <natemmcm@gmail.com>"]
edition = "2018"

[dependencies]
sigil = { path = "../sigil" }
rand = "0.7.3"
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'CssStyleDeclaration',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlTexture',
  'WebGlShader',
  'Window',
  'MouseEvent',
  'console'
]

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
